mejoras tp3